cmake_minimum_required(VERSION 3.15)
project(Problem_Set_1)

set(CMAKE_CXX_STANDARD 14)


#add_executable(Problem_Set_1 Problem\ 2.16/main.cpp)
#add_executable(Problem_Set_1 Problem\ 2.17/main.cpp)
#add_executable(Problem_Set_1 Problem\ 2.19/main.cpp)
#add_executable(Problem_Set_1 Problem\ 2.23/main.cpp)
add_executable(Problem_Set_1 Problem\ 2.27/main.cpp)
#add_executable(Problem_Set_1 Problem\ 2.28/main.cpp)