cmake_minimum_required(VERSION 3.15)
project(Problem_Set_2)

set(CMAKE_CXX_STANDARD 14)

add_executable(Problem_Set_2 Problem\ 3.9/main.cpp)
#add_executable(Problem_Set_2 Problem\ 3.10/main.cpp)
#add_executable(Problem_Set_2 Problem\ 3.11/main.cpp)
#add_executable(Problem_Set_2 Problem\ 3.13/main.cpp)
#add_executable(Problem_Set_2 Problem\ 3.14/main.cpp)