cmake_minimum_required(VERSION 3.15)
project(Problem_Set_2)

set(CMAKE_CXX_STANDARD 14)

#add_executable(Problem_Set_3 Problem\ 4.28/main.cpp)
#add_executable(Problem_Set_3 Problem\ 4.34/main.cpp)
#add_executable(Problem_Set_3 Problem\ 4.36/main.cpp)
add_executable(Problem_Set_3 Problem\ 5.30/main.cpp)
#add_executable(Problem_Set_3 Problem\ 5.33/main.cpp)
#add_executable(Problem_Set_3 Problem\ 5.35/main.cpp)