cmake_minimum_required(VERSION 3.15)
project(Problem_Set_4)

set(CMAKE_CXX_STANDARD 14)

add_executable(Problem_Set_4 Problem\ 6.48/main.cpp "Problem 6.48/main.cpp")
#add_executable(Problem_Set_4 Problem\ 6.49/main.cpp)
#add_executable(Problem_Set_4 Problem\ 6.51/main.cpp)
#add_executable(Problem_Set_4 Problem\ 6.52/main.cpp)
#add_executable(Problem_Set_4 Problem\ 6.54/main.cpp)