cmake_minimum_required(VERSION 3.15)
project(Problem_Set_5)

set(CMAKE_CXX_STANDARD 14)

#add_executable(Problem_Set_4 Problem\ 7.13/main.cpp)
#add_executable(Problem_Set_4 Problem\ 7.14/main.cpp)
#add_executable(Problem_Set_4 Problem\ 7.19/main.cpp)
#add_executable(Problem_Set_4 Problem\ 8.9/main.cpp)
add_executable(Problem_Set_4 Problem\ 8.10/main.cpp)