cmake_minimum_required(VERSION 3.15)
project(Problem_Set_6)

set(CMAKE_CXX_STANDARD 14)

add_executable(Problem_Set_6 main.cpp)
#add_executable(Problem_Set_6 Problem\ 9.6/main.cpp)
#add_executable(Problem_Set_6 Problem\ 9.9/main.cpp)
#add_executable(Problem_Set_6 Problem\ 9.16/main.cpp)
#add_executable(Problem_Set_6 Problem\ 9.23/main.cpp)