cmake_minimum_required(VERSION 3.15)
project(Problem_Set_7)

set(CMAKE_CXX_STANDARD 14)

#add_executable(Problem_Set_7 main.cpp)

#add_executable(Problem_Set_7 Problem\ 10.6/main.cpp)
add_executable(Problem_Set_7 Problem\ 10.10/main.cpp)
#add_executable(Problem_Set_7 Problem\ 11.9/main.cpp)
#add_executable(Problem_Set_7 Problem\ 11.10/main.cpp)