cmake_minimum_required(VERSION 3.15)
project(Problem_Set_7)

set(CMAKE_CXX_STANDARD 14)

#add_executable(Problem_Set_7 main.cpp)

add_executable(Problem_Set_7 Problem\ 10.6/main.cpp)
#add_executable(Problem_Set_7 Problem\ 10.10/main.cpp "Problem 10.10/Rational.cpp" "Problem 10.10/Rational.h")
#add_executable(Problem_Set_7 Problem\ 11.9/main.cpp "Problem 11.9/Package.cpp" "Problem 11.9/TwoDayPackage.cpp" "Problem 11.9/OvernightPackage.cpp" "Problem 11.9/Person.cpp" "Problem 11.9/Person.h")
#add_executable(Problem_Set_7 Problem\ 11.10/main.cpp "Problem 11.10/Account.cpp" "Problem 11.10/Account.h" "Problem 11.10/SavingsAccount.cpp" "Problem 11.10/SavingsAccount.h" "Problem 11.10/CheckingAccount.cpp" "Problem 11.10/CheckingAccount.h")